[tool.poetry]
name = "pdfrenamer"
version = "0.1.0"
description = ""
authors = ["Mario <mariohertu@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
spire-pdf = "^10.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
